nova_tests/negative_capability/defer_return_rejected.nv
// EXPECT_COMPILE_ERROR `return` is not allowed at the top level of `defer` body
//
// D90 Ф.3 (Вариант 3): top-level `return` в defer body запрещён —
// он hijack'нул бы scope-exit окружающей функции. `return` внутри
// nested fn-литерала в defer body — разрешён (local control).

module nova_tests.negative_capability.defer_return_rejected


fn f() -> int {
    defer {
        return 42       // ❌ return в defer body
    }
    7
}
